fix: issue with the drawer rendering where the layout is shifted from the animation

--- a/packages/design-toolkit/src/components/drawer/styles.module.css
+++ b/packages/design-toolkit/src/components/drawer/styles.module.css
@@ -29,7 +29,7 @@
     --drawer-main-rows: var(--drawer-main-row-start) /
       var(--drawer-main-row-end);
 
-    @apply relative grid h-full w-full;
+    @apply relative grid h-full w-full overflow-hidden;
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto 1fr auto;
 
@@ -233,12 +233,14 @@
     @apply gap-s p-l flex h-full min-h-0 flex-col;
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
 
     @variant motion-safe {
       transition:
         transform var(--animation-duration-fast)
           var(--animation-easing-standard),
-        opacity var(--animation-duration-fast) var(--animation-easing-standard);
+        opacity var(--animation-duration-fast) var(--animation-easing-standard),
+        visibility 0s var(--animation-duration-fast);
     }
 
     @variant group-placement-left/drawer {
@@ -260,7 +262,9 @@
     @variant group-open/drawer {
       opacity: 1;
       pointer-events: auto;
+      visibility: visible;
       transform: translate(0, 0);
+      transition-delay: 0s;
     }
 
     @variant group-placement-left/drawer {
